# docs/openapi.json
@@ -212,6 +212,16 @@
               "string"
             ]
           },
+          "search": {
+            "oneOf": [
+              {
+                "type": "null"
+              },
+              {
+                "$ref": "#/components/schemas/AdaptiveSearchStep"
+              }
+            ]
+          },
           "sourceBytes": {
             "format": "int64",
             "pattern": "^-?(?:0|[1-9]\\d*)$",
